fixed code smells (#1568)
* fixed code smells

* removed unused loggers

* removed unused loggers and impots

* will fail quality gate still

* reverted change in async ccd bundle stitching service, to be refactored in new pr

* re-added loggers with suppressions, added close to openmocks, fixed .stream onto newline

---------

Co-authored-by: yogesh-hullatti <53007108+yogesh-hullatti@users.noreply.github.com>