@@ -5,7 +5,6 @@ import uk.gov.hmcts.reform.em.orchestrator.service.dto.CcdBundleDTO;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class InputValidationException extends RuntimeException {
 
@@ -16,7 +15,7 @@ public class InputValidationException extends RuntimeException {
 
         this.violations = violations.stream()
             .map(ConstraintViolation::getMessage)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<String> getViolations() {
